# src/api/REST/services/user.service.ts
@@ -1,6 +1,6 @@
 import { AdminUser, UserBase, UserType } from "../models/user.model";
 import { v4 as uuidv4 } from 'uuid';
-import { UserCreationRequest } from "../interfaces/requests/usercreation.request";
+import { UserCreationRequest } from "../interfaces/requests/user.request";
 
 class UsersService {
 
@@ -8,7 +8,17 @@ class UsersService {
     return new AdminUser(
       uuidv4(),
       userCreationParams.name,
-      "testpass",
+      "$2a$10$W2cr7YCvYxlwicl.Ce0pUuQEuVqSGrO9CO07Fe8g9NS7SCJuNpmeC",
+      UserType.Admin,
+    );
+  }
+
+  public get(username:String): UserBase {
+    console.log(username);
+    return new AdminUser(
+      uuidv4(),
+      "Rushan",
+      "$2a$10$W2cr7YCvYxlwicl.Ce0pUuQEuVqSGrO9CO07Fe8g9NS7SCJuNpmeC",
       UserType.Admin,
     );
   }
